<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_AlarmManager" Id="{783794f2-b6e8-4a39-b328-15c52d8b8a6c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	nMaxKeypads		: INT := 5;										// Maximum number of keypads
	nMaxSirens		: INT := 5;										// Maximum number of sirens
	nMaxSensors		: INT := 10;									// Maximum number of sensors
	sCode			: STRING := '1234';								// Configured alarm code
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>